--- a/webshow.css
+++ b/webshow.css
@@ -20,15 +20,29 @@ td.field-name-td, td.field-equals-td, td.field-comma-td {
   vertical-align: top;
 }
 
+.toggle > .check {
+  display: none;
+}
+
 span.brace {
 }
 
+span.con-name:hover {
+  background: #3da491;
+  color: white;
+}
+
+span.con-name, .inner > .brace {
+  cursor: pointer;
+}
+
 span.con-name {
-    color: #22863a;
+  color: #22863a;
+  border-radius: 3px;
 }
 
 span.integer {
-    color: #005cc5;
+  color: #005cc5;
 }
 
 .toggle .check + .inner > .contents {
@@ -39,3 +53,8 @@ span.integer {
   display: block;
 }
 .toggle { display: flex; }
+
+.inner:hover > .brace {
+  background: #e1f6ee;
+  color: green;
+}
